--- a/packages/@websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
+++ b/packages/@websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
@@ -1,75 +1,77 @@
 @keyframes welcome-illustration-kraken-waves {
-  0% {
-    scale: 1 0.8;
-  }
-  50% {
-    scale: 1 1.2;
-  }
-  100% {
-    scale: 1 0.8;
-  }
+    0% {
+        scale: 1 0.8;
+    }
+    50% {
+        scale: 1 1.2;
+    }
+    100% {
+        scale: 1 0.8;
+    }
 }
 @keyframes welcome-illustration-kraken-tentacules {
-  0% {
-    scale: 0.9;
-  }
-  50% {
-    scale: 1.05;
-  }
-  100% {
-    scale: 0.9;
-  }
+    0% {
+        scale: 0.9;
+    }
+    50% {
+        scale: 1.05;
+    }
+    100% {
+        scale: 0.9;
+    }
 }
 
 .welcome-illustration-kraken {
-  position: absolute;
-  top: 50%;
-  right: calc(50% + 150px);
-  transform: translateX(100%) translateY(-50%);
-  width: 900px;
-  height: 100%;
-  pointer-events: none;
-  user-select: none;
-  z-index: 10;
+    position: absolute;
+    top: 50%;
+    right: calc(50% + 150px);
+    transform: translateX(100%) translateY(-50%);
+    width: 900px;
+    height: 100%;
+    pointer-events: none;
+    user-select: none;
+    z-index: 10;
 
-  /* @sugar.media mobile {
+    /* @sugar.media mobile {
             display: none;
         } */
 
-  /* [stop-color='#F2BC2B'] {
+    /* [stop-color='#F2BC2B'] {
           stop-color: sugar.color(accent, --alpha 0);
       }
       [stop-color='#4900E6'] {
           stop-color: sugar.color(complementary, --alpha 0);
       } */
 
-  .__tentacule-01,
-  .__tentacule-03,
-  .__tentacule-05,
-  .__tentacule-07 {
-    path {
-      stroke: sugar.color(base, foreground, --alpha 0.2);
-      fill: none;
+    .__tentacule-01,
+    .__tentacule-03,
+    .__tentacule-05,
+    .__tentacule-07 {
+        path {
+            stroke: sugar.color(base, foreground, --alpha 0.2);
+            fill: none;
+        }
+
+        @sugar.lod (4) {
+            animation: welcome-illustration-kraken-tentacules 4s ease-in-out
+                infinite;
+        }
+    }
+    .__tentacule-02,
+    .__tentacule-04,
+    .__tentacule-06 {
+        path {
+            stroke: sugar.color(base, foreground, --alpha 0.08);
+            fill: none;
+        }
+        @sugar.lod (4) {
+            animation: welcome-illustration-kraken-tentacules 3s ease-in-out
+                infinite;
+            animation-delay: 0.7s;
+        }
     }
 
-    @sugar.lod (4) {
-      animation: welcome-illustration-kraken-tentacules 4s ease-in-out infinite;
-    }
-  }
-  .__tentacule-02,
-  .__tentacule-04,
-  .__tentacule-06 {
-    path {
-      stroke: sugar.color(base, foreground, --alpha 0.08);
-      fill: none;
-    }
-    @sugar.lod (4) {
-      animation: welcome-illustration-kraken-tentacules 3s ease-in-out infinite;
-      animation-delay: 0.7s;
-    }
-  }
-
-  /* [fill='#F7C032'] {
+    /* [fill='#F7C032'] {
       fill: url(#gradient-accent);
     }
     [fill='#5929FB'],
@@ -81,326 +83,326 @@
       mix-blend-mode: multiply !important;
     } */
 
-  .__gradient-accent-start {
-    stop-color: sugar.color(accent);
-  }
-  .__gradient-accent-end {
-    stop-color: sugar.color(accent, --lighten 5%);
-  }
-  .__gradient-complementary-start {
-    stop-color: sugar.color(complementary);
-  }
-  .__gradient-complementary-end {
-    stop-color: sugar.color(complementary, --lighten 10%);
-  }
-
-  .__cup {
-    position: absolute;
-    left: 50%;
-    top: 90%;
-    transform: translateX(-50%) translateY(-100%);
-    z-index: 10;
-  }
-
-  .__smoke {
-    position: absolute;
-    left: 50%;
-    top: -150px;
-    transform: translateX(calc(-50% - 50px)) translateY(0);
-    z-index: 5;
-    opacity: 0.3;
-
-    video {
-      position: absolute;
-      top: 0;
-      left: calc(50% + 50px);
-      transform: translate(-50%, 0);
-      height: 750px;
-      opacity: 0.6;
+    .__gradient-accent-start {
+        stop-color: sugar.color(accent);
+    }
+    .__gradient-accent-end {
+        stop-color: sugar.color(accent, --lighten 5%);
+    }
+    .__gradient-complementary-start {
+        stop-color: sugar.color(complementary);
+    }
+    .__gradient-complementary-end {
+        stop-color: sugar.color(complementary, --lighten 10%);
     }
 
-    display: none;
-    /* @sugar.lod (4) {
-      display: block;
-    } */
-  }
-
-  .__tentacule-01 {
-    position: absolute;
-    bottom: 100px;
-    left: 0;
-  }
-  .__tentacule-02 {
-    position: absolute;
-    bottom: 350px;
-    left: -60px;
-  }
-  .__tentacule-03 {
-    position: absolute;
-    top: 120px;
-    left: 450px;
-  }
-  .__tentacule-04 {
-    position: absolute;
-    top: 300px;
-    left: 510px;
-  }
-  .__tentacule-05 {
-    position: absolute;
-    bottom: 300px;
-    left: 550px;
-  }
-  .__tentacule-06 {
-    position: absolute;
-    bottom: 200px;
-    left: 560px;
-  }
-  .__tentacule-07 {
-    position: absolute;
-    bottom: 100px;
-    left: 400px;
-    /* filter: drop-shadow(4px -10px 10px rgba(0, 0, 0, 0.2)); */
-  }
-
-  .__waves-cup {
-    position: absolute;
-    bottom: 95px;
-    left: 260px;
-    z-index: 20;
-    opacity: 0.7;
-
-    @sugar.lod (4) {
-      animation: welcome-illustration-kraken-waves 3s ease-in-out infinite;
+    .__cup {
+        position: absolute;
+        left: 50%;
+        top: 90%;
+        transform: translateX(-50%) translateY(-100%);
+        z-index: 10;
     }
-  }
 
-  .__waves-01,
-  .__waves-03,
-  .__waves-05,
-  .__waves-07,
-  .__waves-09 {
-    opacity: 0.3;
-    @sugar.lod (4) {
-      animation: welcome-illustration-kraken-waves 3s ease-in-out infinite;
+    .__smoke {
+        position: absolute;
+        left: 50%;
+        top: -150px;
+        transform: translateX(calc(-50% - 50px)) translateY(0);
+        z-index: 5;
+        opacity: 0.3;
+
+        video {
+            position: absolute;
+            top: 0;
+            left: calc(50% + 50px);
+            transform: translate(-50%, 0);
+            height: 750px;
+            opacity: 0.6;
+        }
+
+        display: none;
+        @sugar.lod (4) {
+            display: block;
+        }
     }
-  }
-  .__waves-02,
-  .__waves-04,
-  .__waves-06,
-  .__waves-08,
-  .__waves-10 {
-    opacity: 0.6;
-    animation-delay: 1.5s;
 
-    @sugar.lod (4) {
-      animation: welcome-illustration-kraken-waves 3s ease-in-out infinite;
+    .__tentacule-01 {
+        position: absolute;
+        bottom: 100px;
+        left: 0;
     }
-  }
+    .__tentacule-02 {
+        position: absolute;
+        bottom: 350px;
+        left: -60px;
+    }
+    .__tentacule-03 {
+        position: absolute;
+        top: 120px;
+        left: 450px;
+    }
+    .__tentacule-04 {
+        position: absolute;
+        top: 300px;
+        left: 510px;
+    }
+    .__tentacule-05 {
+        position: absolute;
+        bottom: 300px;
+        left: 550px;
+    }
+    .__tentacule-06 {
+        position: absolute;
+        bottom: 200px;
+        left: 560px;
+    }
+    .__tentacule-07 {
+        position: absolute;
+        bottom: 100px;
+        left: 400px;
+        /* filter: drop-shadow(4px -10px 10px rgba(0, 0, 0, 0.2)); */
+    }
 
-  .__waves-01 {
-    position: absolute;
-    bottom: 70px;
-    left: -150px;
-    z-index: 20;
-  }
-  .__waves-02 {
-    position: absolute;
-    bottom: 50px;
-    left: 30px;
-    z-index: 20;
-  }
-  .__waves-03 {
-    position: absolute;
-    bottom: 70px;
-    left: 200px;
-    z-index: 20;
-  }
-  .__waves-04 {
-    position: absolute;
-    bottom: 60px;
-    left: 300px;
-    z-index: 20;
-  }
-  .__waves-05 {
-    position: absolute;
-    bottom: 30px;
-    left: 230px;
-    z-index: 20;
-  }
-  .__waves-06 {
-    position: absolute;
-    bottom: 60px;
-    left: 450px;
-    z-index: 20;
-  }
-  .__waves-07 {
-    position: absolute;
-    bottom: 30px;
-    left: 500px;
-    z-index: 20;
-  }
-  .__waves-08 {
-    position: absolute;
-    bottom: 50px;
-    left: 650px;
-    z-index: 20;
-  }
-  .__waves-09 {
-    position: absolute;
-    bottom: 30px;
-    left: 760px;
-    z-index: 20;
-  }
-  .__waves-10 {
-    position: absolute;
-    bottom: 90px;
-    left: 890px;
-    z-index: 20;
-  }
+    .__waves-cup {
+        position: absolute;
+        bottom: 95px;
+        left: 260px;
+        z-index: 20;
+        opacity: 0.7;
 
-  .__discover-02 {
-    position: absolute;
-    top: 70%;
-    left: 0;
-    width: calc(100% - 100px);
-    transform: translateX(50px) translateY(-50%);
-    z-index: 100;
-  }
+        @sugar.lod (4) {
+            animation: welcome-illustration-kraken-waves 3s ease-in-out infinite;
+        }
+    }
 
-  .__shadow {
-    display: block;
-    position: absolute;
-    top: 92%;
-    left: 0;
-    width: calc(100% - 100px);
-    height: 10px;
-    transform: translateX(100px);
-    background: linear-gradient(
-      90deg,
-      rgba(0, 0, 0, 0),
-      rgba(0, 0, 0, 0.7),
-      rgba(0, 0, 0, 0)
-    );
-    filter: blur(10px);
-  }
+    .__waves-01,
+    .__waves-03,
+    .__waves-05,
+    .__waves-07,
+    .__waves-09 {
+        opacity: 0.3;
+        @sugar.lod (4) {
+            animation: welcome-illustration-kraken-waves 3s ease-in-out infinite;
+        }
+    }
+    .__waves-02,
+    .__waves-04,
+    .__waves-06,
+    .__waves-08,
+    .__waves-10 {
+        opacity: 0.6;
+        animation-delay: 1.5s;
+
+        @sugar.lod (4) {
+            animation: welcome-illustration-kraken-waves 3s ease-in-out infinite;
+        }
+    }
+
+    .__waves-01 {
+        position: absolute;
+        bottom: 70px;
+        left: -150px;
+        z-index: 20;
+    }
+    .__waves-02 {
+        position: absolute;
+        bottom: 50px;
+        left: 30px;
+        z-index: 20;
+    }
+    .__waves-03 {
+        position: absolute;
+        bottom: 70px;
+        left: 200px;
+        z-index: 20;
+    }
+    .__waves-04 {
+        position: absolute;
+        bottom: 60px;
+        left: 300px;
+        z-index: 20;
+    }
+    .__waves-05 {
+        position: absolute;
+        bottom: 30px;
+        left: 230px;
+        z-index: 20;
+    }
+    .__waves-06 {
+        position: absolute;
+        bottom: 60px;
+        left: 450px;
+        z-index: 20;
+    }
+    .__waves-07 {
+        position: absolute;
+        bottom: 30px;
+        left: 500px;
+        z-index: 20;
+    }
+    .__waves-08 {
+        position: absolute;
+        bottom: 50px;
+        left: 650px;
+        z-index: 20;
+    }
+    .__waves-09 {
+        position: absolute;
+        bottom: 30px;
+        left: 760px;
+        z-index: 20;
+    }
+    .__waves-10 {
+        position: absolute;
+        bottom: 90px;
+        left: 890px;
+        z-index: 20;
+    }
+
+    .__discover-02 {
+        position: absolute;
+        top: 70%;
+        left: 0;
+        width: calc(100% - 100px);
+        transform: translateX(50px) translateY(-50%);
+        z-index: 100;
+    }
+
+    .__shadow {
+        display: block;
+        position: absolute;
+        top: 92%;
+        left: 0;
+        width: calc(100% - 100px);
+        height: 10px;
+        transform: translateX(100px);
+        background: linear-gradient(
+            90deg,
+            rgba(0, 0, 0, 0),
+            rgba(0, 0, 0, 0.7),
+            rgba(0, 0, 0, 0)
+        );
+        filter: blur(10px);
+    }
 }
 
 /* @sugar.partial (welcome) { */
 #homepage-welcome {
-  height: calc(100vh - 200px);
-  min-height: 800px;
-  text-align: left;
-  position: relative;
-  z-index: 10;
-  padding-block: 0;
-
-  @sugar.media mobile {
-    height: auto;
-
-    text-align: center;
-    position: relative;
-    top: 100px;
-    left: 0;
-    width: 100%;
-  }
-
-  .__logo {
-    width: 270px;
-
-    @sugar.media mobile {
-      display: block;
-      margin: 0 auto;
-    }
-  }
-
-  input {
+    height: calc(100vh - 200px);
+    min-height: 800px;
     text-align: left;
-  }
-
-  .s-slider__slides {
-    display: flex;
-
-    @sugar.media mobile {
-      height: auto;
-      min-height: 600px;
-      height: calc(100vh - 100px);
-      /* align-items: start; */
-    }
-  }
-
-  .s-slider[lnf='welcome-header'] {
-    margin-top: 100px;
-    height: calc(100% - 100px);
-    opacity: 0;
-    transition: sugar.transition();
-    position: absolute;
-    z-index: 0;
-
-    &[mounted] {
-      opacity: 1;
-      position: relative;
-    }
+    position: relative;
+    z-index: 10;
+    padding-block: 0;
 
     @sugar.media mobile {
-      height: auto;
-      margin-top: 0;
-    }
-  }
+        height: auto;
 
-  [s-slider-slide]:not(.s-slider .s-slider [s-slider-slide]) {
-    flex: 0 0 100%;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    opacity: 0;
-    @sugar.transition (fast);
-
-    &.pre-active {
-      opacity: 1;
-      transition-delay: 0.5s !important;
+        text-align: center;
+        position: relative;
+        top: 100px;
+        left: 0;
+        width: 100%;
     }
 
-    &.active {
-      opacity: 1;
-    }
-  }
+    .__logo {
+        width: 270px;
 
-  .s-slider .s-slider [s-slider-slide] {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    color: white;
-  }
-
-  .__content {
-    /* width: 50%; */
-    pointer-events: none;
-    padding-right: 35%;
-    /* text-align: center; */
-    /* padding-top: 200px; */
-
-    > * {
-      pointer-events: all;
+        @sugar.media mobile {
+            display: block;
+            margin: 0 auto;
+        }
     }
 
-    .s-typo--h3,
-    .s-typo--p,
-    .s-typo--lead {
-      /* margin-inline: auto; */
+    input {
+        text-align: left;
     }
 
-    @sugar.media >=wide {
-      @sugar.container (wide);
+    .s-slider__slides {
+        display: flex;
+
+        @sugar.media mobile {
+            height: auto;
+            min-height: 600px;
+            height: calc(100vh - 100px);
+            /* align-items: start; */
+        }
     }
 
-    @sugar.media mobile {
-      position: relative;
-      top: 0;
-      left: 0;
-      width: 100%;
-      transform: none;
-      padding: sugar.padding(30) sugar.padding(30);
+    .s-slider[lnf='welcome-header'] {
+        margin-top: 100px;
+        height: calc(100% - 100px);
+        opacity: 0;
+        transition: sugar.transition();
+        position: absolute;
+        z-index: 0;
+
+        &[mounted] {
+            opacity: 1;
+            position: relative;
+        }
+
+        @sugar.media mobile {
+            height: auto;
+            margin-top: 0;
+        }
     }
-  }
+
+    [s-slider-slide]:not(.s-slider .s-slider [s-slider-slide]) {
+        flex: 0 0 100%;
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        opacity: 0;
+        @sugar.transition (fast);
+
+        &.pre-active {
+            opacity: 1;
+            transition-delay: 0.5s !important;
+        }
+
+        &.active {
+            opacity: 1;
+        }
+    }
+
+    .s-slider .s-slider [s-slider-slide] {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        color: white;
+    }
+
+    .__content {
+        /* width: 50%; */
+        pointer-events: none;
+        padding-right: 35%;
+        /* text-align: center; */
+        /* padding-top: 200px; */
+
+        > * {
+            pointer-events: all;
+        }
+
+        .s-typo--h3,
+        .s-typo--p,
+        .s-typo--lead {
+            /* margin-inline: auto; */
+        }
+
+        @sugar.media >=wide {
+            @sugar.container (wide);
+        }
+
+        @sugar.media mobile {
+            position: relative;
+            top: 0;
+            left: 0;
+            width: 100%;
+            transform: none;
+            padding: sugar.padding(30) sugar.padding(30);
+        }
+    }
 }
