--- a/packages/tools/sugar/src/views/twig/sugar/components/slider/slider.twig
+++ b/packages/tools/sugar/src/views/twig/sugar/components/slider/slider.twig
@@ -29,7 +29,7 @@
             </div>
         {% endfor %}
     {% else %}
-        {{ content|raw }}
+        {{ html|raw }}
     {% endif %}
 
 </s-slider>
