--- a/packages/@examples/01-basic/src/views/sections/slider/slider.twig
+++ b/packages/@examples/01-basic/src/views/sections/slider/slider.twig
@@ -3,6 +3,12 @@
     {{ specsValues(_context)|raw }}
     >
     <div class="s-container">
-        {% include 'sugar/components/slider/slider.twig' with slider only %}
+        <s-slider controls loop>
+            {% for slide in slides %}
+                <div s-slider-slide>
+                    <img src="{{ slide.url }}" />
+                </div>
+            {% endfor %}
+        </s-slider>
     </div>
 </section>
