--- a/packages/@examples/01-basic/src/views/sections/slider/slider.twig
+++ b/packages/@examples/01-basic/src/views/sections/slider/slider.twig
@@ -1,5 +1,4 @@
-<section class="section-slider {{ paddingClasses(padding) }} {{ marginClasses(margin) }}" s-appear in="bottom" delay="500"
-    s-specs="views.sections.slider"
+<section class="section-slider {{ paddingClasses(padding) }} {{ marginClasses(margin) }}" s-specs="views.sections.slider"
     {{ specsValues(_context)|raw }}
     >
     <div class="s-container">
