--- a/packages/@examples/02-systemsChart/src/views/sections/chart/chart.twig
+++ b/packages/@examples/02-systemsChart/src/views/sections/chart/chart.twig
@@ -16,7 +16,6 @@
                 <div class="_systems">
                     {% for system in systems %}
                         <div class="_system">
-
                             <div class="s-tooltip-container">
                                 <a href="{{ system.url }}" target="_blank">
                                     <img class="_system-logo" src="{{ system.logo }}" />
@@ -24,6 +23,9 @@
                                 <div class="s-tooltip:bottom s-color:complementary s-white-space:nowrap">
                                     {{ system.title }}
                                 </div>
+                                {% if system.whyNot %}
+                                    <div class="_not"></div>
+                                {% endif %}
                             </div>
                         </div>
                     {% endfor %}
@@ -45,12 +47,20 @@
                                     {% set note = note + system.features[key].rate %}
                                 {% elseif system.whyNot %}
                                 {% elseif system.features[key].check %}
-                                    {% set note = note + 1 %}
+                                    {% if features[key].pts %}
+                                        {% set note = note + features[key].pts %}
+                                    {% else %}    
+                                        {% set note = note + 1 %}
+                                    {% endif %}
                                 {% endif %}
                             {% endfor %}
 
                             <div class="_system">
-                                <div class="_note">{{ note }}</div>
+                                {% if system.whyNot %}
+                                    <div class="_note">-</div>
+                                {% else %}
+                                    <div class="_note">{{ note }}</div>
+                                {% endif %}
                             </div>
                         {% endfor %}
                     </div>
@@ -69,6 +79,16 @@
                         <div class="_feature">
                             <div class="s-tooltip-container">
                                 {{ feature.title }}
+                                {% if feature.pts %}
+                                    <div class="s-tooltip-container">
+                                        <span class="s-badge:outline s-color:complementary">
+                                            <span class="_pts">{{ feature.pts }}</span>
+                                        </span>
+                                        <div class="s-tooltip s-white-space:nowrap">
+                                            Ponderation 1-10
+                                        </div>
+                                    </div>
+                                {% endif %}
                                 {% if feature.category == 'feature' %}
                                     <i class="s-icon:feature"></i>
                                 {% else %}
@@ -91,10 +111,20 @@
                         <div class="_system">
 
                             <div class="_feature">
-                                {% if system.price %}
-                                    <span class="s-badge:outline s-color:error"> {{ system.prics }} </span>
+
+                                {% if system.whyNot %}
+                                    <div class="s-tooltip-container">
+                                        <div class="_why-not"></div>
+                                        <div class="s-tooltip s-color:info s-white-space:nowrap">
+                                            {{ system.whyNot }}
+                                        </div>
+                                    </div>
                                 {% else %}
-                                    <span class="s-badge:outline s-color:success"> FREE </span>
+                                    {% if system.price %}
+                                        <span class="s-badge:outline s-color:error"> {{ system.prics }} </span>
+                                    {% else %}
+                                        <span class="s-badge:outline s-color:success"> FREE </span>
+                                    {% endif %}
                                 {% endif %}
                             </div>
 
@@ -104,10 +134,10 @@
                                         {% if system.features[key].rate %}
                                             <div class="s-tooltip-container">
                                                 <div class="_rating">
-                                                    {{ system.features[key].rate }} <i class="s-icon:star"></i>
+                                                    <span class="s-typo:bold">{{ system.features[key].rate }}</span>/100 <i class="s-icon:star"></i>
                                                 </div>
                                                 <div class="s-tooltip s-color:info s-white-space:nowrap">
-                                                    {{ system.features[key].info }}
+                                                    {{ system.features[key].info }}. +<span class="s-typo:bold">{{ system.features[key].rate }}</span> pts
                                                 </div>
                                             </div>
 
@@ -126,7 +156,12 @@
                                                 {% if system.features[key].check %}
                                                     <i class="s-icon:check"></i>
                                                     <div class="s-tooltip s-color:success s-white-space:nowrap">
-                                                        Yeah bro!
+                                                        Yeah bro! 
+                                                        {% if features[key].pts %}
+                                                            <span class="s-typo:bold">+{{ features[key].pts }}</span> pts
+                                                        {% else %}    
+                                                            +1 pt
+                                                        {% endif %}
                                                     </div>
                                                 {% else %}
                                                     <i class="s-icon:cross"></i>
